--- a/static/css/base.css
+++ b/static/css/base.css
@@ -59,7 +59,7 @@ header .top-row {
 
 .menu {
   background-color: #666;
-  height: 30px;
+  height: auto;
   width: 960px;
   margin: 0 auto;
 }
@@ -75,7 +75,7 @@ header .top-row {
   line-height: 30px;
   font-size: 1em;
   float: right;
-  margin: 0 0 0 35px;
+  margin: 0 30px 0 0px;
   color: white;
 }
 
@@ -309,7 +309,7 @@ textarea {
   width: 500px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width:980px) {
 
   header {
     margin-bottom: 0;
@@ -325,7 +325,7 @@ textarea {
   }
 
   .menu ul {
-    margin: 0 auto;
+    margin: 0 2% 0 0;
   }
 
   header h1 {
