--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,7 +32,7 @@
           </ul>
         </div>
       </div>
-      <h1><a href="/">{if appSettings.logo}<img src="{appSettings.logo}">{else}<img src="img/sheltr-logo-desktop.png">{/if}</a></h1>
+      <h1 id="logos" class="mainlogo"><a href="/"><img src="img/sheltrplusplus-logo.png"></a></h1>
     </header>
     <div class="container">
       {>body}
