--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,7 +25,7 @@
       <div class="top-row">
         <div class="menu">
           <ul>
-            <li><a href="http://getsheltr.tumblr.com">Blog</a></li>
+            <!-- <li><a href="http://getsheltr.tumblr.com">Blog</a></li> -->
             <li><a href="/partners">Partners</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/hotline">Hotline</a></li>
